<resources>
    <string name="app_name">MipSoS</string>
    <string name="permissions_required_title">Permissions Required</string>
    <string name="permissions_required_message">This app needs certain permissions to function properly. No permissions will be used to collect data or for any malicious purposes. Please grant the required permissions.</string>
    <string name="proceed">Proceed</string>
    <string name="exit">Exit</string>
    <string name="add_contact_first">Add Contact First</string>
    <string name="send_sos">Send SOS</string>
    <string name="automatic_sos">Automatic SOS</string>
    <string name="automatic_sos_message">SOS message will be sent automatically in 10 seconds. You can cancel it.</string>
    <string name="cancel">Cancel</string>
    <string name="enable_location">Enable Location</string>
    <string name="enable_location_message">Location services are required for this app to function properly. Please enable location services.</string>
    <string name="proceed_without_location">Proceed without location</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_message">Changing the language will restart the app. Do you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_not_enabled">Location services are not enabled. Some features may not work properly.</string>
    <string name="enable">Enable Location</string>
    <string name="location">Location</string>
    <string name="sms">SMS</string>
    <string name="microphone">Microphone</string>
    <string name="sending_sos_in">Sending SOS in:</string>
    <string name="seconds">second</string>
    <string name="restart_app">Restart App</string>
    <string name="restart_app_message">Do you want to restart the app to apply the new language?</string>
    <string name="emergency_message_hint">Emergency Message</string>
    <string name="location_na">Location: N/A</string>
    <string name="pick_contacts">Pick Emergency Contacts</string>
    <string name="message_status_ready">Message Status: Ready</string>
    <string name="auto_send">Auto Send</string>
    <string name="apn_settings">APN Settings</string>
    <string name="permissions_disclaimer_title">Permissions Disclaimer</string>
    <string name="permissions_disclaimer_message">This app needs certain permissions to function properly. No permissions will be used to collect data or for any malicious purposes. Please grant the required permissions.</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="app_settings_message">Some permissions were permanently denied. Please go to app settings to grant all required permissions.</string>
    <string name="open_settings">Open Settings</string>
    <string name="warning_title">Warning</string>
    <string name="contact_limit_warning_message">You have added a significant number of contacts. Adding too many numbers may prevent others from using the cell tower during an emergency. Are you sure you want to continue?</string>
    <string name="lat">Lat:</string>
    <string name="longt">Long:</string>
    <string name="recording_started">Recording started</string>
    <string name="recording_failed">Recording failed</string>
    <string name="not_recording">Not Recording</string>
    <string name="record_audio">Record Audio</string>
    <string name="stop">Stop</string>
    <string name="recording_saved">Recording saved</string>
    <string name="recording_file_not_found">Error: Recording file not found</string>
    <string name="signal_strength">Signal Strength: %d</string>
    <string name="telephony_manager_null">TelephonyManager is null</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="network_scan_results">Network Scan Results: %d</string>
    <string name="lte_signal_strength">LTE Signal Strength: %d for %s</string>
    <string name="gsm_signal_strength">GSM Signal Strength: %d for %s</string>
    <string name="cdma_signal_strength">CDMA Signal Strength: %d for %s</string>
    <string name="wcdma_signal_strength">WCDMA Signal Strength: %d for %s</string>
    <string name="unknown_cell_info">Unknown cell info type: %s</string>
    <string name="apn_signal_strength">APN: %s assigned signal strength: %d</string>
    <string name="network_scan_complete">Network Scan Complete</string>
    <string name="network_scan_error">Network Scan Error: %d</string>
    <string name="failed_start_network_scan">Failed to start network scan</string>
    <string name="max_retry_attempts_reached">Max retry attempts reached</string>
    <string name="turkcell">Turkcell</string>
    <string name="vodafone_turkey">Vodafone Türkiye</string>
    <string name="turk_telekom">Türk Telekom</string>
    <string name="unknown">Unknown</string>
    <string name="max_contacts_limit">You cannot add more than 50 contacts.</string>
    <string name="contact_no_phone_number">Contact has no phone number</string>
    <string name="added_contact">Added contact: %s</string>
    <string name="location_permissions_not_granted">Location permissions are not granted.</string>
    <string name="lat_long">Lat: %1$.5f Long: %2$.5f</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="permissions_explanation">This app needs certain permissions to function properly. No permissions will be used to collect data or for any malicious purposes. Please grant the required permissions.</string>
    <string name="permissions_needed">This app needs the following permissions to function properly. Please grant all permissions.</string>
    <string name="permissions_permanently_denied">Some permissions were permanently denied. Please go to app settings to grant all required permissions.</string>
    <string name="contacts">Contacts</string>
    <string name="default_message">Emergency! Please send help to my location.</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="add_contact">Add Contacts</string>
    <string name="select_theme_mode">Select Theme Mode</string>
    <string name="night_mode">Night</string>
    <string name="day_mode">Day</string>
    <string name="follow_system_mode">Follow System</string>
    <string name="use_provided_sound" />
    <string name="playback_intervals">Interval</string>
    <string name="play_whistle">Whistle</string>
    <string name="interval_15_seconds">15 Seconds</string>
    <string name="interval_1_minutes">1 Minutes</string>
    <string name="interval_10_minutes">10 Minutes</string>
    <string name="select_interval">Select Interval</string>
    <string name="cancel_interval">Cancel</string>
    <string name="stop_playback">Stop</string>
    <string name="play_recording">Play</string>
    <string name="countdown">%d</string>
    <string name="notification_channel_name">Sound Playback Service Channel</string>
    <string name="notification_content_title">Sound Playback</string>
    <string name="notification_content_text">Playing sound at intervals</string>
    <string name="stop_button_text">Stop</string>
</resources>
