<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">


    <ImageButton
        android:id="@+id/themeModeButton"
        android:layout_width="36dp"
        android:layout_height="45dp"
        android:layout_above="@+id/cardView"
        android:layout_below="@+id/appIcon"
        android:layout_alignStart="@+id/cardView"
        android:layout_marginStart="2dp"
        android:layout_marginTop="-26dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="-5dp"
        android:layout_toEndOf="@+id/appIcon"
        android:background="@drawable/ic_day_night_mode_button" />

    <ImageButton
        android:id="@+id/languageSwitchButton"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardView"
        android:layout_below="@+id/appIcon"
        android:layout_alignEnd="@+id/cardView"
        android:layout_marginTop="-38dp"
        android:layout_marginEnd="-7dp"
        android:layout_marginBottom="-9dp"
        android:background="@drawable/language_switch2" />

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appIcon"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/gradient_background_card">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/primary_text_color"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/emergency_message_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/messageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="76dp"
                    android:textColor="@color/primary_text_color"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/recordButton"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:icon="@android:drawable/ic_btn_speak_now"
                    android:text="@string/record_audio"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text_color" />

                <TextView
                    android:id="@+id/recordingStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/not_recording"
                    android:textColor="@color/secondary_text_color"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/playbackButton"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_play"
                    android:text="@string/play_recording"
                    android:textSize="18sp"
                    android:textColor="@color/primary_text_color" />

                <Switch
                    android:id="@+id/soundSourceSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/use_provided_sound"
                    android:textColor="@color/primary_text_color" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="end|center_vertical">

                    <CheckBox
                        android:id="@+id/playbackIntervalCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/playback_intervals"
                        android:textColor="@color/primary_text_color" />

                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_na"
                android:textColor="@color/secondary_text_color" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/pickContactsButton"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@android:drawable/ic_menu_call"
                android:text="@string/pick_contacts"
                android:textSize="18sp"
                android:textColor="@color/primary_text_color" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/sendButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_sos"
                android:textSize="18sp"
                android:textColor="@color/secondary_color"
                app:strokeColor="@color/secondary_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/sendStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_status_ready"
                    android:textColor="@color/secondary_text_color"
                    android:layout_alignParentStart="true" />

                <CheckBox
                    android:id="@+id/autoSendCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:checked="true"
                    android:text="@string/auto_send"
                    android:textColor="@color/primary_text_color" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/apnSettingsButton"
                style="@style/Widget.Material3.Button"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sendStatusTextView"
                android:layout_marginTop="0dp"
                app:icon="@android:drawable/ic_menu_manage"
                android:text="@string/apn_settings"
                android:textSize="18sp"
                android:textColor="@color/primary_text_color" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>
